src/prometheus/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-prometheus
  namespace: prometheus
spec:
  rules:
    - host: prometheus.homekube.org
      http:
        paths:
          - backend:
              serviceName: prometheus-server
              servicePort: 80
            path: /
